server client UI added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,16 +18,19 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".EntryActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".LiveFeed"
             android:screenOrientation="landscape" />
+        <activity
+            android:name=".ClientFeed"
+            android:screenOrientation="landscape" />
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
